Changed XML to 'view' instead of 'download'

--- a/APIDocumentation/cta-dataset-en.html
+++ b/APIDocumentation/cta-dataset-en.html
@@ -353,7 +353,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="manufacturerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml', 'manufacturerEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="manufacturerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml', 'manufacturerEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -381,7 +382,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="medicalconditionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml', 'medicalconditionEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="medicalconditionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml', 'medicalconditionEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -409,7 +411,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="productbrandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml', 'productbrandEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                       <!-- <td><a id="productbrandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml', 'productbrandEN')">Access</a></td>-->
                                     </tr>
                                     <tr>
                                         <td>Brand</td>
@@ -435,7 +438,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="protocolEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=en&type=xml', 'protocolEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="protocolEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=en&type=xml', 'protocolEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -463,7 +467,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=en&type=xml', 'statusEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                       <!-- <td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=en&type=xml', 'statusEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -491,7 +496,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="studypopulationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml', 'studypopulationEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="studypopulationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml', 'studypopulationEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
