--- a/APIDocumentation/cta-dataset-fr.html
+++ b/APIDocumentation/cta-dataset-fr.html
@@ -351,7 +351,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="manufacturerFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml', 'manufacturerFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="manufacturerFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml', 'manufacturerFR')">Accès</a></td>-->
                                         </tr>
                                         <tr>
                                             <td>Manufacturer</td>
@@ -379,7 +380,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="medicalconditionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml', 'medicalconditionFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="medicalconditionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml', 'medicalconditionFR')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -408,7 +410,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="productbrandFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml', 'productbrandFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="productbrandFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml', 'productbrandFR')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -437,7 +440,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="protocolFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml', 'protocolFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="protocolFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml', 'protocolFR')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -465,7 +469,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="statusFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=fr&type=xml', 'statusFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="statusFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=fr&type=xml', 'statusFR')">Accès</a></td>-->
                                         </tr>
                                         <tr>
                                             <td>Status</td>
@@ -493,7 +498,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a id="studypopulationFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml', 'studypopulationFR')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="studypopulationFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml', 'studypopulationFR')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
