--- a/APIDocumentation/cvp-dataset-fr.html
+++ b/APIDocumentation/cvp-dataset-fr.html
@@ -287,7 +287,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -317,7 +320,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/drugproductingredient/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/drugproductingredient/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                           <!-- <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/drugproductingredient/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -347,7 +353,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="drugproductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/drugproduct/?lang=fr&type=xml', 'drugproductEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/drugproduct/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                           <!-- <td><a id="drugproductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/drugproduct/?lang=fr&type=xml', 'drugproductEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -376,7 +385,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="genderEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/gender/?lang=fr&type=xml', 'genderEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/gender/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="genderEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/gender/?lang=fr&type=xml', 'genderEN')">Accès</a></td>-->
                                         </tr>
 
 
@@ -406,7 +418,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="outcomeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/outcome/?lang=fr&type=xml', 'outcomeEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/outcome/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="outcomeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/outcome/?lang=fr&type=xml', 'outcomeEN')">Accès</a></td>-->
                                         </tr>
 
 
@@ -436,7 +451,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="reactionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reaction/?lang=fr&type=xml', 'reactionEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reaction/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                           <!-- <td><a id="reactionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reaction/?lang=fr&type=xml', 'reactionEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -465,7 +483,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="reportdrugEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportdrug/?lang=fr&type=xml', 'reportdrugEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportdrug/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                           <!-- <td><a id="reportdrugEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportdrug/?lang=fr&type=xml', 'reportdrugEN')">Accès</a></td>-->
                                         </tr>
 
 
@@ -496,7 +517,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -528,7 +552,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="reportlinkEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportlink/?lang=fr&type=xml', 'reportlinkEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportlink/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="reportlinkEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportlink/?lang=fr&type=xml', 'reportlinkEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -557,7 +584,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="reporttypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reporttype/?lang=fr&type=xml', 'reporttypeEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reporttype/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="reporttypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reporttype/?lang=fr&type=xml', 'reporttypeEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -586,7 +616,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="reportEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/report/?lang=fr&type=xml', 'reportEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/report/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="reportEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/report/?lang=fr&type=xml', 'reportEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -615,7 +648,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="seriousnessEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/seriousness/?lang=fr&type=xml', 'seriousnessEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/seriousness/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="seriousnessEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/seriousness/?lang=fr&type=xml', 'seriousnessEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -644,7 +680,10 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/source/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>
+                                            <td>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/source/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            </td>
+                                            <!--<td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/source/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
