--- a/APIDocumentation/dhpr-dataset-fr.html
+++ b/APIDocumentation/dhpr-dataset-fr.html
@@ -396,7 +396,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/activeingredient/?lang=fr&type=xml', 'activeIngredientEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/activeingredient/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/activeingredient/?lang=fr&type=xml', 'activeIngredientEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -422,7 +423,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aer/?lang=fr&type=xml', 'aerEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aer/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aer/?lang=fr&type=xml', 'aerEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -447,7 +449,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerGenderEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aergender/?lang=fr&type=xml', 'aerGenderEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aergender/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerGenderEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aergender/?lang=fr&type=xml', 'aerGenderEN')">Accès</a></td>-->
                                     </tr>
 
 
@@ -473,7 +476,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerIndicationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerindication/?lang=fr&type=xml', 'aerIndicationEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerindication/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerIndicationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerindication/?lang=fr&type=xml', 'aerIndicationEN')">Accès</a></td>-->
                                     </tr>
 
 
@@ -499,7 +503,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aeringredient/?lang=fr&type=xml', 'aerIngredientEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aeringredient/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aeringredient/?lang=fr&type=xml', 'aerIngredientEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -524,7 +529,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerLinkEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerlink/?lang=fr&type=xml', 'aerLinkEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerlink/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerLinkEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerlink/?lang=fr&type=xml', 'aerLinkEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -549,7 +555,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerOutcomeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aeroutcome/?lang=fr&type=xml', 'aerOutcomeEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aeroutcome/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                        <!--<td><a id="aerOutcomeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aeroutcome/?lang=fr&type=xml', 'aerOutcomeEN')">Accès</a></td>-->
 
                                     </tr>
 
@@ -575,7 +582,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerProductInformationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerproductinformation/?lang=fr&type=xml', 'aerProductInformationEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerproductinformation/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                        <!--<td><a id="aerProductInformationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerproductinformation/?lang=fr&type=xml', 'aerProductInformationEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -600,7 +608,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerReactionTermEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerreactionterm/?lang=fr&type=xml', 'aerReactionTermEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerreactionterm/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerReactionTermEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerreactionterm/?lang=fr&type=xml', 'aerReactionTermEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -625,7 +634,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerReportTypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerreporttype/?lang=fr&type=xml', 'aerReportTypeEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerreporttype/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerReportTypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerreporttype/?lang=fr&type=xml', 'aerReportTypeEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -650,7 +660,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerSeriousEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerserious/?lang=fr&type=xml', 'aerSeriousEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aerserious/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerSeriousEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aerserious/?lang=fr&type=xml', 'aerSeriousEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -675,7 +686,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="aerSourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aersource/?lang=fr&type=xml', 'aerSourceEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/aersource/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                      <!--  <td><a id="aerSourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/aersource/?lang=fr&type=xml', 'aerSourceEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -700,7 +712,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Unilingual</td>
-                                        <td><a id="aerSourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/BrandName/?lang=fr&type=xml', 'brandName')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/brandname/?type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="aerSourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/BrandName/?lang=fr&type=xml', 'brandName')">Accès</a></td>-->
 
                                     </tr>
 
@@ -726,7 +739,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="ciEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/ci/?lang=fr&type=xml', 'ciEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/ci/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                       <!-- <td><a id="ciEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/ci/?lang=fr&type=xml', 'ciEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -751,7 +765,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="companyEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/company/?lang=fr&type=xml', 'companyEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/company/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                      <!--  <td><a id="companyEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/company/?lang=fr&type=xml', 'companyEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -776,7 +791,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="drugProductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/drugproduct/?lang=fr&type=xml', 'drugProductEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/drugproduct/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                      <!--  <td><a id="drugProductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/drugproduct/?lang=fr&type=xml', 'drugProductEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -801,7 +817,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="pharmFormEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/pharmform/?lang=fr&type=xml', 'pharmFormEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/pharmform/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                     <!--   <td><a id="pharmFormEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/pharmform/?lang=fr&type=xml', 'pharmFormEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -826,7 +843,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="productMonographEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/productmonograph/?lang=fr&type=xml', 'productMonographEN')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/productmonograph/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                     <!--   <td><a id="productMonographEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/productmonograph/?lang=fr&type=xml', 'productMonographEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -851,7 +869,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="routeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/route/?lang=fr&type=xml', 'routeEn')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/route/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                     <!--   <td><a id="routeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/route/?lang=fr&type=xml', 'routeEn')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -875,7 +894,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Unilingual</td>
-                                        <td><a id="xref" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/xref/?type=xml', 'xref')">Accès</a></td>
+                                        <td><a href="https://api.hres.ca/dhpr1/api/xref/?type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                    <!--    <td><a id="xref" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dhpr1/api/xref/?type=xml', 'xref')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
