--- a/APIDocumentation/lnhpd-dataset-fr.html
+++ b/APIDocumentation/lnhpd-dataset-fr.html
@@ -387,7 +387,8 @@
                                                 <td>Ingredient</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="ingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredient/?lang=fr&type=xml', 'ingredientEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/ingredient/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="ingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredient/?lang=fr&type=xml', 'ingredientEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -409,7 +410,8 @@
                                                 <td>Ingredient Quantity</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="ingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientquantity/?lang=fr&type=xml', 'ingredientEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/ingredientquantity/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="ingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientquantity/?lang=fr&type=xml', 'ingredientEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -431,7 +433,8 @@
                                                 <td>Ingredient Source</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="ingredientsourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientsource/?lang=fr&type=xml', 'ingredientsourceEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/ingredientsource/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="ingredientsourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientsource/?lang=fr&type=xml', 'ingredientsourceEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -453,7 +456,8 @@
                                                 <td>Ingredient Submission</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="ingredientsubmissionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientsubmission/?lang=fr&type=xml', 'ingredientsubmissionEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/ingredientsubmission/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                               <!-- <td><a id="ingredientsubmissionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/ingredientsubmission/?lang=fr&type=xml', 'ingredientsubmissionEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -475,7 +479,8 @@
                                                 <td>Product Dose</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="productdoseEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productdose/?lang=fr&type=xml', 'productdoseEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/productdose/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                               <!-- <td><a id="productdoseEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productdose/?lang=fr&type=xml', 'productdoseEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -497,7 +502,8 @@
                                                 <td>Product Licence</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="productlicenceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productlicence/?lang=fr&type=xml', 'productlicenceEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/productlicence/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="productlicenceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productlicence/?lang=fr&type=xml', 'productlicenceEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -519,7 +525,8 @@
                                                 <td>Product Purpose</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="productpurposeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productpurpose/?lang=fr&type=xml', 'productpurposeEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/productpurpose/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="productpurposeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productpurpose/?lang=fr&type=xml', 'productpurposeEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -541,7 +548,8 @@
                                                 <td>Product Risk</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="productriskEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productrisk/?lang=fr&type=xml', 'productriskEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/productrisk/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                                <!--<td><a id="productriskEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productrisk/?lang=fr&type=xml', 'productriskEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
@@ -563,7 +571,8 @@
                                                 <td>Product Route</td>
                                                 <td>XML</td>
                                                 <td>Français</td>
-                                                <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productroute/?lang=fr&type=xml', 'productrouteEN')">Accès</a></td>
+                                                <td><a href="https://api.hres.ca/lnhpd/api/productroute/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                              <!--  <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/lnhpd/api/productroute/?lang=fr&type=xml', 'productrouteEN')">Accès</a></td>-->
                                             </tr>
 
                                             <tr>
