--- a/APIDocumentation/mdall-dataset-en.html
+++ b/APIDocumentation/mdall-dataset-en.html
@@ -291,7 +291,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Active</td>
-                                        <td><a id="licenceActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml', 'licenceArchived')">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml" target="_blank" title="Resource 1">Access</a></td>
+                                        <!--<td><a id="licenceActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml', 'licenceArchived')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -315,7 +316,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archived</td>
-                                        <td><a id="licenceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml', 'licenceArchived')">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml" target="_blank" title="Resource 1">Access</a></td>
+                                        <!--<td><a id="licenceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml', 'licenceArchived')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -344,7 +346,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Active</td>
-                                        <td><a id="companyActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml', 'companyActive')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml" target="_blank" title="Resource 1">Access</a>
+                                        </td>
+                                       <!-- <td><a id="companyActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml', 'companyActive')">Access</a></td>-->
                                     </tr>
 
 
@@ -372,7 +377,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archived</td>
-                                        <td><a id="companyArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml', 'companyArchived')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml" target="_blank" title="Resource 2">Access</a>
+                                        </td>
+                                        <!--<td><a id="companyArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml', 'companyArchived')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -402,7 +410,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Active</td>
-                                        <td><a id="deviceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml', 'deviceActive')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml" target="_blank" title="Resource 1">Access</a>
+                                        </td>
+                                       <!-- <td><a id="deviceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml', 'deviceActive')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -428,7 +439,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archived</td>
-                                        <td><a id="deviceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml', 'deviceArchived')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml" target="_blank" title="Resource 2">Access</a>
+                                        </td>
+                                       <!-- <td><a id="deviceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml', 'deviceArchived')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -456,7 +470,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archived</td>
-                                        <td><a id="deviceIdActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=active&type=xml', 'deviceIdActive')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=xml" target="_blank" title="Resource 1">Access</a>
+                                        </td>
+                                        <!--<td><a id="deviceIdActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=active&type=xml', 'deviceIdActive')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -482,7 +499,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archived</td>
-                                        <td><a id="deviceIDArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=archived&type=xml', 'deviceIDArchived')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=xml" target="_blank" title="Resource 2">Access</a>
+                                        </td>
+                                        <!--<td><a id="deviceIDArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=archived&type=xml', 'deviceIDArchived')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -510,7 +530,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="licencetypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml', 'licencetypeEN')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
+                                        </td>
+                                        <!--<td><a id="licencetypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml', 'licencetypeEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -539,7 +562,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="sbdlocationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml', 'sbdlocationEN')">Access</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
+                                        </td>
+                                        <!--<td><a id="sbdlocationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml', 'sbdlocationEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
