--- a/APIDocumentation/mdall-dataset-fr.html
+++ b/APIDocumentation/mdall-dataset-fr.html
@@ -21,7 +21,7 @@
     <meta name="dcterms.modified" title="W3CDTF" content="2016-03-18" />
     <meta name="review_date" content="" />
     <meta name="meta_date" content="" />
-
+    s
     <!-- Load closure template scripts -->
     <script type="text/javascript" src="https://ssl-templates.services.gc.ca/app/cls/wet/gcweb/v4_0_21/js/compiled/soyutils.js"></script>
     <script type="text/javascript" src="https://ssl-templates.services.gc.ca/app/cls/wet/gcweb/v4_0_21/js/compiled/wet-fr.js"></script>
@@ -290,7 +290,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td><a id="licenceActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml', 'licenceArchived')">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a></td>
+                                        <!--<td><a id="licenceActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml', 'licenceArchived')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -314,7 +315,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td><a id="licenceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml', 'licenceArchived')">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml" target="_blank" title="Resource 1">Accès</a></td>
+                                        <!--<td><a id="licenceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml', 'licenceArchived')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -322,7 +324,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archivé</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archLicence&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archLicence&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -343,7 +345,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td><a id="companyActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml', 'companyActive')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="companyActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml', 'companyActive')">Accès</a></td>-->
                                     </tr>
 
 
@@ -352,7 +357,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Actif</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=company&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=company&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -371,7 +376,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td><a id="companyArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml', 'companyArchived')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                        </td>
+                                       <!-- <td><a id="companyArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml', 'companyArchived')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -379,7 +387,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archivé</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archCompany&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archCompany&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -401,7 +409,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td><a id="deviceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml', 'deviceActive')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                       <!-- <td><a id="deviceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml', 'deviceActive')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -409,7 +420,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Actif</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=device&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=device&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <tr>
@@ -427,7 +438,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td><a id="deviceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml', 'deviceArchived')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                        </td>
+                                       <!-- <td><a id="deviceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml', 'deviceArchived')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -435,7 +449,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archivé</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archDevice&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archDevice&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -455,7 +469,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td><a id="deviceIdActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=active&type=xml', 'deviceIdActive')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="deviceIdActive" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=active&type=xml', 'deviceIdActive')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -463,7 +480,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Actif</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=identifier&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=identifier&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <tr>
@@ -481,7 +498,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td><a id="deviceIDArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=archived&type=xml', 'deviceIDArchived')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=xml" target="_blank" title="Resource 2">Accès</a>
+                                        </td>
+                                        <!--<td><a id="deviceIDArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/deviceIdentifier/?status=archived&type=xml', 'deviceIDArchived')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -489,7 +509,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archivé</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archIdentifier&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=archIdentifier&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Licence Type-->
@@ -499,7 +519,7 @@
                                         <td>JSON</td>
                                         <td>Français</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=json" target="_blank" title="Resource 1">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=json" target="_blank" title="Resource 1">Accès</a>
                                         </td>
                                     </tr>
 
@@ -509,7 +529,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="licencetypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml', 'licencetypeEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                       <!-- <td><a id="licencetypeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=xml', 'licencetypeEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -517,7 +540,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=licenceType&lang=en">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=licenceType&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!--SBD Location-->
@@ -529,7 +552,7 @@
                                         <td>JSON</td>
                                         <td>Français</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=json" target="_blank" title="Resource 1">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=json" target="_blank" title="Resource 1">Accès</a>
                                         </td>
                                     </tr>
 
@@ -538,7 +561,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="sbdlocationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml', 'sbdlocationEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                       <!-- <td><a id="sbdlocationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=xml', 'sbdlocationEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -546,7 +572,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=sbdLocation&lang=en">CSV</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/CSV/DownloadCSV?dataType=sbdLocation&lang=fr">CSV</a></td>
                                     </tr>
                                     <tr>
                                         <td>Medical Devices Active Licence Listing API Documentation</td>
