--- a/APIDocumentation/noc-dataset-en.html
+++ b/APIDocumentation/noc-dataset-en.html
@@ -312,7 +312,7 @@
                                 <ul class="nav nav-pills">
                                     <li class="active"></li>
                                 </ul>
-                            </div>
+                            </div> 
                         </div>
                         <div class="row">
                             <div class="col-md-12">
@@ -352,7 +352,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="brandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=en&type=xml', 'brandEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/brand/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="brandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=en&type=xml', 'brandEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -380,7 +381,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="noticeofcompliancemainEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=en&type=xml', 'noticeofcompliancemainEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="noticeofcompliancemainEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=en&type=xml', 'noticeofcompliancemainEN')">Access</a></td>-->
                                     </tr>
 
 
@@ -409,7 +411,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="productEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=en&type=xml', 'productEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/product/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                       <!-- <td><a id="productEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=en&type=xml', 'productEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -437,7 +440,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="productformEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=en&type=xml', 'productformEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/productform/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                       <!-- <td><a id="productformEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=en&type=xml', 'productformEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -465,7 +469,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="productingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=en&type=xml', 'productingredientEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/productingredient/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="productingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=en&type=xml', 'productingredientEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -493,7 +498,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=en&type=xml', 'productrouteEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/productroute/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                       <!-- <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=en&type=xml', 'productrouteEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -521,7 +527,8 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a id="vetspeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=en&type=xml', 'vetspeciesEN')">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/vetspecies/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <!--<td><a id="vetspeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=en&type=xml', 'vetspeciesEN')">Access</a></td>-->
                                     </tr>
 
                                     <tr>
