--- a/APIDocumentation/noc-dataset-fr.html
+++ b/APIDocumentation/noc-dataset-fr.html
@@ -351,7 +351,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="brandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=fr&type=xml', 'brandEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/brand/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="brandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=fr&type=xml', 'brandEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -379,7 +380,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="noticeofcompliancemainEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=fr&type=xml', 'noticeofcompliancemainEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="noticeofcompliancemainEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=fr&type=xml', 'noticeofcompliancemainEN')">Accès</a></td>-->
                                         </tr>
 
 
@@ -408,7 +410,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="productEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=fr&type=xml', 'productEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/product/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="productEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=fr&type=xml', 'productEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -436,7 +439,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="productformEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=fr&type=xml', 'productformEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/productform/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="productformEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=fr&type=xml', 'productformEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -464,7 +468,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="productingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=fr&type=xml', 'productingredientEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/productingredient/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="productingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=fr&type=xml', 'productingredientEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -492,7 +497,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=fr&type=xml', 'productrouteEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/productroute/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=fr&type=xml', 'productrouteEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
@@ -520,7 +526,8 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>Français</td>
-                                            <td><a id="vetspeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=fr&type=xml', 'vetspeciesEN')">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/vetspecies/?lang=fr&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <!--<td><a id="vetspeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=fr&type=xml', 'vetspeciesEN')">Accès</a></td>-->
                                         </tr>
 
                                         <tr>
