--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -290,7 +290,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/activeingredient/?lang=fr&type=xml', 'activeIngredientEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/activeingredient/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/activeingredient/?lang=fr&type=xml', 'activeIngredientEN')">Accès</a></td>-->
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
 
@@ -317,7 +320,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="companyEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/company/?lang=fr&type=xml', 'companyEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/company/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="companyEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/company/?lang=fr&type=xml', 'companyEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -344,7 +350,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="drugProductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/drugproduct/?lang=fr&type=xml', 'drugProductEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="drugProductEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/drugproduct/?lang=fr&type=xml', 'drugProductEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -371,7 +380,8 @@
                                         <td>XML</td>
                                         <td>Français</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=1&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=1&lang=fr&type=json" target="_blank" title="Resource 2">Accès</a>
+                                            <!--<a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=1&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
 
@@ -401,6 +411,7 @@
                                         <td>Français</td>
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=2&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                            <!--<a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=2&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
 
@@ -429,6 +440,7 @@
                                         <td>Français</td>
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=3&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                            <!--<a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=3&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
 
@@ -457,6 +469,7 @@
                                         <td>Français</td>
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=4&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                            <!-- <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=4&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
 
@@ -485,6 +498,7 @@
                                         <td>Français</td>
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=6&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>
+                                            <!--<a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=6&lang=fr&type=xml" target="_blank" title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
 
@@ -514,7 +528,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="formEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/form/?lang=fr&type=xml', 'formEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/form/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="formEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/form/?lang=fr&type=xml', 'formEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -541,7 +558,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="packagingEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/packaging/?lang=fr&type=xml', 'packagingEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/packaging/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="packagingEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/packaging/?lang=fr&type=xml', 'packagingEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -568,7 +588,8 @@
                                         <td>XML</td>
                                         <td>Français</td>
                                         <td>
-                                            <a id="pharmaceuticalstd" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/pharmaceuticalstd/?type=xml', 'pharmaceuticalstd')">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/pharmaceuticalstd/?type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            <!--<a id="pharmaceuticalstd" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/pharmaceuticalstd/?type=xml', 'pharmaceuticalstd')">Accès</a>-->
                                         </td>
                                     </tr>
                                     <tr>
@@ -594,7 +615,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="routeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/route/?lang=fr&type=xml', 'routeEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/route/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="routeEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/route/?lang=fr&type=xml', 'routeEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -620,7 +644,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="scheduleEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/schedule/?lang=fr&type=xml', 'scheduleEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/schedule/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="scheduleEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/schedule/?lang=fr&type=xml', 'scheduleEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -647,7 +674,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/status/?lang=fr&type=xml', 'statusEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/status/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/status/?lang=fr&type=xml', 'statusEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -676,7 +706,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="therapeuticClassEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/therapeuticclass/?lang=fr&type=xml', 'therapeuticClassEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/therapeuticclass/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="therapeuticClassEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/therapeuticclass/?lang=fr&type=xml', 'therapeuticClassEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
@@ -703,7 +736,10 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Français</td>
-                                        <td><a id="veterinarySpeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/drugveterinaryspecies/?lang=fr&type=xml', 'veterinarySpeciesEN')">Accès</a></td>
+                                        <td>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugveterinaryspecies/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
+                                        </td>
+                                        <!--<td><a id="veterinarySpeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/drugveterinaryspecies/?lang=fr&type=xml', 'veterinarySpeciesEN')">Accès</a></td>-->
                                     </tr>
 
                                     <tr>
